@@ -45,6 +45,7 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -55,6 +56,11 @@ import static com.appsmith.server.acl.AclPermission.UNASSIGN_PERMISSION_GROUPS;
 import static com.appsmith.server.constants.FieldName.ADMINISTRATOR;
 import static com.appsmith.server.constants.FieldName.ANONYMOUS_USER;
 import static com.appsmith.server.constants.FieldName.DEVELOPER;
+import static com.appsmith.server.constants.FieldName.NUMBER_OF_ASSIGNED_USER_GROUPS;
+import static com.appsmith.server.constants.FieldName.NUMBER_OF_UNASSIGNED_USER_GROUPS;
+import static com.appsmith.server.constants.FieldName.EVENT_DATA;
+import static com.appsmith.server.constants.FieldName.NUMBER_OF_ASSIGNED_USERS;
+import static com.appsmith.server.constants.FieldName.NUMBER_OF_UNASSIGNED_USERS;
 import static java.lang.Boolean.TRUE;
 
 @Component
@@ -316,6 +322,9 @@ public class UserAndAccessManagementServiceImpl extends UserAndAccessManagementS
                 .flatMap(permissionGroup1 -> {
                     Map<String, Object> eventData = Map.of(FieldName.ASSIGNED_USERS_TO_PERMISSION_GROUPS, usernames,
                             FieldName.ASSIGNED_USER_GROUPS_TO_PERMISSION_GROUPS, userGroupNames);
+                    Map<String, Object> analyticsProperties = Map.of(NUMBER_OF_ASSIGNED_USERS, usernames.size(),
+                            NUMBER_OF_ASSIGNED_USER_GROUPS, userGroupNames.size(),
+                            EVENT_DATA, eventData);
                     AnalyticsEvents assignedEvent;
                     if (! usernames.isEmpty() && ! userGroupNames.isEmpty()) {
                         assignedEvent = AnalyticsEvents.ASSIGNED_TO_PERMISSION_GROUP;
@@ -324,7 +333,7 @@ public class UserAndAccessManagementServiceImpl extends UserAndAccessManagementS
                     } else {
                         assignedEvent = AnalyticsEvents.ASSIGNED_USER_GROUPS_TO_PERMISSION_GROUP;
                     }
-                    return analyticsService.sendObjectEvent(assignedEvent, permissionGroup1, eventData);
+                    return analyticsService.sendObjectEvent(assignedEvent, permissionGroup1, analyticsProperties);
                 });
 
     }
@@ -344,6 +353,9 @@ public class UserAndAccessManagementServiceImpl extends UserAndAccessManagementS
                 .flatMap(pg -> {
                     Map<String, Object> eventData = Map.of(FieldName.UNASSIGNED_USERS_FROM_PERMISSION_GROUPS, usernames,
                             FieldName.UNASSIGNED_USER_GROUPS_FROM_PERMISSION_GROUPS, userGroupNames);
+                    Map<String, Object> analyticsProperties = Map.of(NUMBER_OF_UNASSIGNED_USERS, usernames.size(),
+                            NUMBER_OF_UNASSIGNED_USER_GROUPS, userGroupNames.size(),
+                            EVENT_DATA, eventData);
                     AnalyticsEvents unassignedEvent;
                     if (! usernames.isEmpty() && ! userGroupNames.isEmpty())
                         unassignedEvent = AnalyticsEvents.UNASSIGNED_FROM_PERMISSION_GROUP;
@@ -352,7 +364,7 @@ public class UserAndAccessManagementServiceImpl extends UserAndAccessManagementS
                     else
                         unassignedEvent = AnalyticsEvents.UNASSIGNED_USER_GROUPS_FROM_PERMISSION_GROUP;
                     return analyticsService.sendObjectEvent(unassignedEvent,
-                            pg, eventData);
+                            pg, analyticsProperties);
                 });
     }
 
@@ -410,13 +422,13 @@ public class UserAndAccessManagementServiceImpl extends UserAndAccessManagementS
     // send only ONE
     private List<PermissionGroup> prunePermissionGroups(List<PermissionGroup> permissionGroups) {
         List<PermissionGroup> nonAutoCreatedPermissionGroups = permissionGroups.stream()
-                .filter(pg -> ! StringUtils.hasLength(pg.getDefaultWorkspaceId()))
+                .filter(pg -> Objects.isNull(pg.getDefaultDomainType()))
                 .collect(Collectors.toList());
         List<PermissionGroup> highestOrderAutoCreatedPgs = permissionGroups.stream()
-                .filter(pg -> StringUtils.hasLength(pg.getDefaultWorkspaceId()))
-                .collect(Collectors.toList())
+                .filter(pg -> Objects.nonNull(pg.getDefaultDomainType()))
+                .toList()
                 .stream()
-                .collect(Collectors.groupingBy(PermissionGroup::getDefaultWorkspaceId))
+                .collect(Collectors.groupingBy(PermissionGroup::getDefaultDomainId))
                 .values().stream()
                 .map(pgList -> {
                     pgList.sort(permissionGroupComparator());
